0030: Update re test05h

--- a/0030-2020-06-17.md
+++ b/0030-2020-06-17.md
@@ -41,6 +41,28 @@ Here are some references:
     > This is required *even if the data type is for
     > **combinational** logic.*
 
+## `test05h`
+
+I tried to adapt `test05g` so it would use A440 tuning, and I made [`test05h`](https://github.com/algofoogle/sandpit/tree/master/fpga/XC9572XL/test05/t05h). I had intended to use a `function` to calculate period constants for me, but I hit a [bug](#synthesis-parser-bug) and ended up just hard-coding the constants (at least for now).
+
+I also got fitter errors which I managed to work around (but not sure if it shows my design is poor):
+
+*   Original error:
+    ```
+    Re-checking device resources ...
+    Mapping a total of 48 equations into 4 function blocks.......................................................................................
+    ERROR:Cpld:892 - Cannot place signal U1/tone<3>. Consider reducing the
+    collapsing input limit or the product term limit to prevent the fitter from
+    creating high input and/or high product term functions.
+    ....ERROR:Cpld:868 - Cannot fit the design into any of the specified devices with
+    the selected implementation options.
+    ```
+*   Per [this](https://forums.xilinx.com/t5/CPLDs-Archived/XC95144XL-Fitting-Issue/td-p/8630), it might be a good idea to check out the [CPLD Fitting, Tips and Tricks](https://www.xilinx.com/support/documentation/application_notes/xapp444.pdf). I'm not sure whether my design just needs a lot more CPLD space, or whether it just happens to be arranged in a way that causes trouble when the fitter tries to find a solution.
+*   I went to "Implement Design" Process Properties and then "Fitting" and changed "Implementation Template" to "Optimize Density" instead of "Balanced".
+*   This seems to have worked around the problem. At a glance it looks like it has substantially reduced the various numbers (i.e. percentage of total density), but I can't say from what, exactly.
+
+Now the scale starts at octave 0, note 'A' (actually A2, officially, at 110Hz). The `testmode` buttons work as they do in `test05g`, too.
+
 ## `Fit` bug
 
 I was getting an error along the lines of this: https://forums.xilinx.com/t5/CPLDs-Archived/FIT-fails-with-no-error-reported/td-p/70945
@@ -100,6 +122,71 @@ tsim -intstyle ise test05f test05f.nga
 # Generate Timing
 taengine -intstyle ise -f test05f -w --format html1 -l test05f_html/tim/timing_report.htm
 ```
+
+## Synthesis parser bug
+
+While working on `test05h`, I got this error during synthesis:
+
+```
+Analyzing module <music> in library <work>.
+INTERNAL_ERROR:Xst:cmain.c:3464:1.56 -  Process will terminate. For technical support on this issue, please open a WebCase with this project attached at http://www.xilinx.com/support.  
+
+Process "Synthesize - XST" failed
+```
+
+It looks like this is described in [AR# 51670](https://www.xilinx.com/support/answers/51670.html) (more info [here](https://forums.xilinx.com/t5/Welcome-Join/INTERNAL-ERROR-Xst-cmain-c-3464-1-56/td-p/699594)), and apparently the solution for ISE is to:
+
+> update the Synthesis Property or Setting with "-use_new_parser yes" in the other command line options
+
+...which I did [like this](i/0030-xst-new-parser.png).
+
+...but it didn't work. That gives an error about the option not being suitable for the selected device:
+
+```
+ERROR:Xst:2883 - Option "-use_new_parser" is not available for the selected device family.
+```
+
+I tried running this command directly from the shell:
+
+```bash
+xst -intstyle ise -ifn "/home/ise/shared_projects/sandpit/fpga/XC9572XL/test05/t05h/working/test05g.xst" -ofn "/home/ise/shared_projects/sandpit/fpga/XC9572XL/test05/t05h/working/test05g.syr"
+```
+
+...but it didn't help:
+
+```
+[ise@localhost working]$ xst -intstyle ise -ifn "/home/ise/shared_projects/sandpit/fpga/XC9572XL/test05/t05h/working/test05g.xst" -ofn "/home/ise/shared_projects/sandpit/fpga/XC9572XL/test05/t05h/working/test05g.syr"
+Reading design: test05g.prj
+
+=========================================================================
+*                          HDL Compilation                              *
+=========================================================================
+Compiling verilog file "../div12.v" in library work
+Compiling verilog file "../music.v" in library work
+Module <divide_by_12> compiled
+Compiling verilog file "../test05h.v" in library work
+Module <music> compiled
+Module <test05g> compiled
+No errors in compilation
+Analysis of file <"test05g.prj"> succeeded.
+.
+.
+.
+=========================================================================
+*                            HDL Analysis                               *
+=========================================================================
+Analyzing top module <test05g>.
+Module <test05g> is correct for synthesis.
+ 
+Analyzing module <music> in library <work>.
+INTERNAL_ERROR:Xst:cmain.c:3464:1.56 -  Process will terminate. For technical support on this issue, please open a WebCase with this project attached at http://www.xilinx.com/support.  
+Aborted (core dumped)
+```
+
+I suspect the problem is with my mathematical expressions.
+
+For now I just hard-coded the constants.
+
 
 ## Notes
 
