0032: Updated re fixing test05i

--- a/0032-2020-06-20.md
+++ b/0032-2020-06-20.md
@@ -163,6 +163,9 @@ There is [one other line](https://github.com/algofoogle/sandpit/blob/eca62991e2e
 
 ...i.e. don't constantly assign `0` back into `counter_octave`.
 
+I ended up [changing the code to use a 6.25MHz clock](https://github.com/algofoogle/sandpit/commit/c3895f1967a876765a3a99a0cd3971d2a97f356e#diff-e0d7274c981ac306b8e0cb01ca51e2f6) (by dividing 50MHz by 8), so I was able to save on some repeated counter bits in `music`, and this made the fitting work on the first try. I also [put the last line of the song in](https://github.com/algofoogle/sandpit/commit/660517cb6bb67f2b4b88da2f3962827bcee654f0#diff-e0d7274c981ac306b8e0cb01ca51e2f6), but had to trim the last note to allow a gap of silence before it loops back to the start.
+
+
 ## Notes
 
 *   I should learn more about [Parameterized Modules](http://www.mrc.uidaho.edu/mrc/people/jff/EO_440/Handouts/SystemVerilog%20and%20Modeling/SV%20Parameterized%20Modules.pdf) which allow us to do things like define a module with a variable number of bits (i.e. variable vector size). See also: [this](http://www.asic-world.com/verilog/para_modules1.html#:~:text=2001) and [this](https://www.chipverify.com/verilog/verilog-parameters).
