0037: A few more notes

--- a/0037-2020-06-29.md
+++ b/0037-2020-06-29.md
@@ -16,3 +16,13 @@
     *   https://allaboutfpga.com/sequence-detector-using-mealy-and-moore-state-machine-vhdl-codes/
     *   https://zipcpu.com/dsp/2017/12/14/logic-pll.html
     *   https://zipcpu.com/tutorial/
+    *   https://hackaday.com/2015/06/15/hackaday-prize-entry-an-open-source-graphics-card/ and https://hackaday.io/project/6309-vga-graphics-over-spi-and-serial-vgatonic
+    *   https://hackaday.io/project/841-teaching-fpga-parallel-computing?utm_source=hackaday&utm_medium=hacklet&utm_campaign=28
+    *   https://hackaday.io/project/1943-vgatonic and https://github.com/dqydj/VGAtonic
+    *   http://pldworld.org/html/technote/intro.cpld.fpga.design.pdf
+
+Project ideas for next test:
+*   Move a cursor on the screen in X and Y. Left button increments X, right button increments Y, both have wrap-around.
+*   Simulate acceleration and deceleration using inertia counters.
+*   Keyboard or keypad input, or even RS-232, to make things more interesting.
+*   Interfacing with SRAM for video bitmap image.
