0037: Note on successfully testing ~64Hz timing

--- a/0037-2020-06-29.md
+++ b/0037-2020-06-29.md
@@ -21,6 +21,10 @@
     *   https://hackaday.io/project/1943-vgatonic and https://github.com/dqydj/VGAtonic
     *   http://pldworld.org/html/technote/intro.cpld.fpga.design.pdf
 
+NOTE: With my little old TFT monitor, I successfully [tweaked the timing](https://github.com/algofoogle/sandpit/commit/05814d2391d599a391e676e50312b4483e6ef69d) to use a line timing of 772 "dots" and a frame timing of 506 lines. This makes the monitor sync at ~63.99Hz, and still correctly show the 640x480 image. As a result, the counter remains very closely in sync with my iPhone stopwatch, second by second.
+
+I have since changed the code back to use normal 640x480 @60Hz timing.
+
 Project ideas for next test:
 *   Move a cursor on the screen in X and Y. Left button increments X, right button increments Y, both have wrap-around.
 *   Simulate acceleration and deceleration using inertia counters.
