--- a/0041-2020-07-13.md
+++ b/0041-2020-07-13.md
@@ -3,3 +3,7 @@
 *   [Setting Global Constraints and Options](https://www.xilinx.com/support/documentation/sw_manuals/xilinx10/books/docs/xst/xst.pdf#page=310) re XST, especially re [Verilog-2001 Attributes](https://www.xilinx.com/support/documentation/sw_manuals/xilinx10/books/docs/xst/xst.pdf#page=314&zoom=100,70,602) and doing so with [Verilog-2001 Meta Comments](https://www.xilinx.com/support/documentation/sw_manuals/xilinx10/books/docs/xst/xst.pdf#page=315&zoom=100,70,704). How official is this?
 *   [Synthesizing Verilog designs in 7400-series logic](https://hackaday.com/2019/07/20/breathing-led-done-with-raw-logic-synthesized-from-a-verilog-design/) using Yosys.
 *   Check out [Nand2Tetris](https://www.nand2tetris.org/) along with [this](https://hackaday.io/project/160865-nand2tetris-in-verilog-part3-verilator-and-sdl2/details) and [this] related to [this example of video simulation from Verilog](https://twitter.com/richard_eng/status/1187073490442162179?lang=en).
+
+Sometimes "Fit" will apparently fail with no explanation, despite everything seeming to have worked. I've tried running the command manually and seen that it gives a SEGFAULT. Evidently a solution to this is to go to the properties for the "Fit" process, select "Reports", and change "HDL Equations Style" to ABEL.
+
+Paddle doesn't go all the way to the top because the comparison between `v` and `paddle` only happens while `v` is still one line behind. Changing it to be exact would probably add extra adder/subtractor logic that we can't afford.
