--- a/0051-2020-08-04.md
+++ b/0051-2020-08-04.md
@@ -99,3 +99,4 @@ NOTE: I believe there are command-line switches for setting the random seed valu
           |    ^~~
                       ... Use "/* verilator lint_off STMTDLY */" and lint_on around source to disable this message.
     ```
+*   [`$monitor` in Verilog](http://www.referencedesigner.com/tutorials/verilog/verilog_09.php) is a nifty way to report any time a parameter changes value, during simulation.
