0052: Notes about installing Verilator in Ubuntu Linux 16.04

--- a/0052-2020-08-05.md
+++ b/0052-2020-08-05.md
@@ -106,7 +106,83 @@ Note above that we see `reset` held on, for those initial ticks.
 ...which is the result *after* `tick()` has completed.
 
 
+## Installing Verilator in Ubuntu Linux
+
+My dev VM is a bit old:
+
+```
+$ lsb_release -a
+No LSB modules are available.
+Distributor ID: Ubuntu
+Description:    Ubuntu 16.04.3 LTS
+Release:        16.04
+Codename:       xenial
+```
+
+That's from 2016, and while it has Verilator, it is a bit old (pre-dating 4.x) so I will [build from source](https://www.veripool.org/projects/verilator/wiki/Installing#_git):
+
+```bash
+sudo apt-get install git make autoconf g++ flex bison
+# The following two are for Ubuntu, but neither were required for my system.
+# In fact, the first one gave an (ignorable) error.
+sudo apt-get install libfl2
+sudo apt-get install libfl-dev
+cd ~/projects
+git clone https://github.com/verilator/verilator
+unset VERILATOR_ROOT
+cd verilator
+git pull
+git checkout stable
+autoconf
+./configure
+make
+sudo make install
+```
+
+OK, it's in the `$PATH` now:
+
+```
+$ which verilator
+/usr/local/bin/verilator
+$ verilator --version
+Verilator 4.038 2020-07-11 rev v4.038-8-gdd03d0f
+```
+
+No need to set `$VERILATOR_ROOT`, I think, because evidently it is a "`Compiled in default if not in environment`".
+
+I tried running `verilator` against my `t01c` example, but it failed: `obj_dir/Vcounter.mk` [referred to the platform-specific `VERILATOR_ROOT` of my Mac](https://github.com/algofoogle/sandpit/blob/32e36c2c5ee1be0b15409366c19218a90cf97d54/fpga/verilator/test01/t01c/obj_dir/Vcounter.mk#L13) which differs from that in my Ubuntu VM. I guess the answer is that `obj_dir` could probably be excluded from the git repo. I ended up deleting it, and then could built a binary that was compatible with my Linux VM:
+
+```bash
+cd ~/shared_projects/sandpit/fpga/verilator/test01/t01c
+rm -rf obj_dir
+verilator --public-flat-rw --cc counter.v --exe --build sim_main.cpp
+obj_dir/Vcounter
+#   Cold start...
+#   [00000000] counter.q=0 counter.(overflow)=0
+#   Counted   0
+#   [00000001] counter.q=1 counter.(overflow)=0
+#   [00000002] counter.q=2 counter.(overflow)=0
+#   [00000003] counter.q=3 counter.(overflow)=0
+#   [00000004] counter.q=4 counter.(overflow)=0
+#   [00000005] counter.q=5 counter.(overflow)=0
+#   Synchronous reset...
+#   [00000006] counter.q=0 counter.(overflow)=0
+#   Main loop...
+#   Counted   0
+#   [00000007] counter.q=1 counter.(overflow)=0
+#   [00000008] counter.q=2 counter.(overflow)=0
+#   [00000009] counter.q=3 counter.(overflow)=0
+#   ...
+```
+
+NOTE: Even though I don't have a desktop environment in my Ubuntu VM, I could still use Verilator to generate a raw data file for something like [Eric Eastwood's VGA Simulator](https://ericeastwood.com/blog/8/vga-simulator-getting-started).
+
+
 ## Other things to review
 
 *   Read more about [VPI](https://www.veripool.org/wiki/verilator/Manual-verilator#VERIFICATION-PROCEDURAL-INTERFACE-VPI)
 *   Read more about generated clocks, starting maybe with [this bit](https://www.veripool.org/wiki/verilator/Manual-verilator#Generated-Clocks).
+*   Online tool for rendering frames from VCD-like simple text data representing the state of VGA signals at various timecodes: [Eric Eastwood's VGA Simulator](https://ericeastwood.com/blog/8/vga-simulator-getting-started)
+*   [higan-verilog](https://www.youtube.com/watch?v=T88LhuoQ7pg&list=PLD6La5JxCaO64OapHFx95pu0fAy1C7_nP&index=33&t=0s) is some sort of interesting blend of a SNES *emulator* with a Verilog hook for selectively modifying reads/writes. See also: [GitHub repo](https://github.com/defparam/higan-verilog)
+*   Why not have a look at the [VGAtonic](https://github.com/dqydj/VGAtonic) that fits in an XC95144XL?
+*   [Icarus Verilog](http://iverilog.icarus.com/)
