0053: Adding notes about Verilator function calls

--- a/0053-2020-08-06.md
+++ b/0053-2020-08-06.md
@@ -61,17 +61,17 @@ Main loop...
 Then this is how it looks with random values. Note how `q` needs the first `eval()` in order to "settle", even though it is an `assign`ed (rather than `reg`istered) value:
 
 ```
-$ make run2 SEED=993 | head -15
+$ make run2 SEED=991 | head -15
 Before first eval()...
-[00000000] clk=0 reset=0 q=225 (counter)=000001F0 (down)
+[00000000] clk=0 reset=0 q=121 (counter)=000001B1 (down)
 After first eval()...
-[00000000] clk=0 reset=0 q=15 (counter)=000001F0 (down)
+[00000000] clk=0 reset=0 q=78 (counter)=000001B1 (down)
 Cold start...
-[00000001] clk=0 reset=0 q=14 (counter)=000001F1 (down)
-[00000002] clk=0 reset=0 q=13 (counter)=000001F2 (down)
-[00000003] clk=0 reset=0 q=12 (counter)=000001F3 (down)
-[00000004] clk=0 reset=0 q=11 (counter)=000001F4 (down)
-[00000005] clk=0 reset=0 q=10 (counter)=000001F5 (down)
+[00000001] clk=0 reset=0 q=77 (counter)=000001B2 (down)
+[00000002] clk=0 reset=0 q=76 (counter)=000001B3 (down)
+[00000003] clk=0 reset=0 q=75 (counter)=000001B4 (down)
+[00000004] clk=0 reset=0 q=74 (counter)=000001B5 (down)
+[00000005] clk=0 reset=0 q=73 (counter)=000001B6 (down)
 Synchronous reset...
 [00000006] clk=0 reset=1 q=0 (counter)=00000000 (up)
 Main loop...
@@ -79,7 +79,51 @@ Main loop...
 [00000008] clk=0 reset=0 q=2 (counter)=00000002 (up)
 ```
 
+When doing something like this:
 
+```verilog
+reg [SIZE:0] counter /* verilator public */;
+```
+
+...noting placement of the semicolon relative to the comment... it exposes `counter` as a variable you can directly access in the C++ code. Just note that whichever `.h` file defines it, that header must be included in your main `.cpp` file, so you can do this, for example:
+
+```cpp
+    printf("counter=%08X\n", m_core->saw_count->counter);
+```
+
+In my example I made this function, to get the status of the internal up/down bit:
+
+```verilog
+`ifdef verilator
+  function get_up_down;
+    // verilator public
+    get_up_down = counter[SIZE];
+  endfunction // get_up_down
+`endif // verilator
+```
+
+Note that the placement of the `// verilator public` comment is vital. If you want, a function like this can also be declared as a bit range such as `function [4:0] whatever;`. In any case, I can easily call the function above in my C++ code like this:
+
+```cpp
+    printf("direction=%s\n", (m_core->saw_count->get_up_down()) ? "down" : "up");
+```
+
+Examples of Verilator functions in Verilog code can be found [here](https://gitlab.lrz.de/ga78cez/optimsoc-sources/blob/a469f23a1b4744554efae0eadc7c69543412b08b/src/rtl/sram/verilog/sram_sp_impl_plain.v).
+
+Verilog `define`s can be set on the `verilator` command-line using `+define+myvar=somevalue`. Note that the `=somevalue` part is optional.
+
+I modified my makefile so it can be used like this:
+
+```bash
+make DEF='myvar=somevalue whatever'
+```
+
+...which in this case is equivalent to including the following in the Verilog code:
+
+```verilog
+`define myvar somevalue
+`define whatever
+```
 
 ## Other things to review
 
