0054: Notes about t10e (trace.vcd) experiment

--- a/0053-2020-08-06.md
+++ b/0053-2020-08-06.md
@@ -91,6 +91,8 @@ reg [SIZE:0] counter /* verilator public */;
     printf("counter=%08X\n", m_core->saw_count->counter);
 ```
 
+(For more info on the headers and how this all works, see [this](https://www.embecosm.com/appnotes/ean6/html/ch06s02s01.html) but note that I think where it mentions `->v`, this only applies for SystemC stuff, which we're not using).
+
 In my example I made this function, to get the status of the internal up/down bit:
 
 ```verilog
