Simple Makefile for creating new entries with 'make new' or just 'make'

--- a/0061-2023-04-16.md
+++ b/0061-2023-04-16.md
@@ -3,7 +3,7 @@
 ## Things to do
 
 *   Get my website going again. Some of the things that become notes here could be articles at https://ammauro.com instead. I had done some work *somewhere* (maybe in a VM on my desktop computer, not yet committed??) on improving its presentation (modern HTML5/CSS, etc?) after [I upgraded it for newer Linux and Ruby platforms](https://github.com/algofoogle/anton.maurovic.com/commit/665db65476b093faa88d46f9e59b5996aeaec563).
-*   Make a shell script for creating new journal entries in this repo.
+*   DONE: ~~Make a shell script for creating new journal entries in this repo.~~
 *   Fix mouse wheel in Ubuntu 20 Desktop VM, in VirtualBox, on Windows host.
 *   Prep a [TinyTapeout](https://tinytapeout.com/) 03 (TT03) submission based on [solo_squash](https://github.com/algofoogle/solo_squash). Cutoff is 23 Apr 2023!
 
