0061: Adding raycasting notes and mousewheel VM fix

--- a/0061-2023-04-16.md
+++ b/0061-2023-04-16.md
@@ -3,8 +3,8 @@
 ## Things to do
 
 *   Get my website going again. Some of the things that become notes here could be articles at https://ammauro.com instead. I had done some work *somewhere* (maybe in a VM on my desktop computer, not yet committed??) on improving its presentation (modern HTML5/CSS, etc?) after [I upgraded it for newer Linux and Ruby platforms](https://github.com/algofoogle/anton.maurovic.com/commit/665db65476b093faa88d46f9e59b5996aeaec563).
-*   DONE: ~~Make a shell script for creating new journal entries in this repo.~~
-*   Fix mouse wheel in Ubuntu 20 Desktop VM, in VirtualBox, on Windows host.
+*   **DONE:** [Make a shell script for creating new journal entries in this repo.](./Makefile) - Run `make new` or just `make`.
+*   **DONE:** [Fix mouse wheel in Ubuntu 20 Desktop VM, in VirtualBox, on Windows host](#fixing-mouse-wheel-in-ubuntu-20-desktop-vm).
 *   Prep a [TinyTapeout](https://tinytapeout.com/) 03 (TT03) submission based on [solo_squash](https://github.com/algofoogle/solo_squash). Cutoff is 23 Apr 2023!
 
 ## Recent stuff
@@ -17,3 +17,90 @@
     *   Goal is to make a hardware-based Wolf3D-style renderer.
     *   I'm figuring out algorithms in C++ first: [raybox-app](https://github.com/algofoogle/raybox-app)
     *   Then I'll try the equivalent in Verilog: [raybox](https://github.com/algofoogle/raybox)
+
+## FPGA Ray Caster notes
+
+*   My aim is to make hardware (FPGA or ASIC) that can accelerate some or all of the rendering for a simple ray-casting (i.e. Wolf3D-style) game.
+*   Intended specs:
+    *   Directly drive a VGA display at 320x200, 320x240, or 640x480 resolution.
+    *   Use at least 2 bits per RGB channel, but preferably full 24-bit colour. 1-bit per channel can sort of work (e.g. blue on H walls, cyan on V walls) but would probably look crappy enough to break the effectiveness of how this looks.
+    *   Motion control and collision detection?
+    *   Sprites?
+    *   64x64 map, or map checking comes from other logic or external memory/device?
+    *   Flat wall colours first, maybe textures later?
+    *   If we can't do real-time tracing, we could do it during VBLANK, or just double-buffer it.
+*   [raybox-app](https://github.com/algofoogle/raybox-app) has some early clunky C++ code that does basic 2D ray casting by DDA
+    *   DDA is Digital Differential Analysis (or Digital Differential Analyzer).
+    *   My original reference was: https://lodev.org/cgtutor/raycasting.html
+    *   My heavily-commented reworking of the DDA algorithm used for wall-map-distance ray casting is [here](https://github.com/algofoogle/raybox-app/blob/f68521b80cede9f9668b9425f3ff47397e6bebbe/src/raybox.cpp#L333-L403).
+    *   [DDA on Wikipedia](https://en.wikipedia.org/wiki/Digital_differential_analyzer_(graphics_algorithm)).
+    *   [Bresenham's line algorithm](https://en.wikipedia.org/wiki/Bresenham%27s_line_algorithm).
+    *   [EFLA](http://www.edepot.com/algorithm.html) (Extremely Fast Line Algorithm).
+    *   [Fixed-point functions](https://github.com/L4v/mirage/blob/master/fixed.c)
+    *   [Fixed-point ray casting](https://github.com/L4v/mirage/blob/5ef395cf232f2245172f8f14ee32130f5242b898/mirage.c#L155)
+*   Other examples of ray-casting and related stuff:
+    *   [Game Engine Black Book - Wolfenstein 3D](https://twitter.com/fabynou/status/1129466350856916992) by Fabien Sanglard. [Actual PDF here of the WOLF book](https://fabiensanglard.net/b/gebbwolf3d.pdf)
+    *   [Sylvain Lefebvre's work on FPGA ray casting](https://twitter.com/sylefeb/status/1254711510812602368)
+    *   [Wolf3D ported to SDL](https://github.com/mozzwald/wolf4sdl)
+    *   [Partial FPGA implementation](https://www.dormando.me/post/fpga-raycaster/) inc. fixed-point maths?
+    *   [raycaster-sdl](https://github.com/drdanick/raycaster-sdl)
+    *   [JS raycasting tutorial on GitHub](https://github.com/vinibiavatti1/RayCastingTutorial)
+    *   [Anarch](https://codeberg.org/drummyfish/Anarch)
+    *   [More discussion about different raycasting techniques](https://hackmd.io/@WeiCheng14159/BJvtRiF_w)
+    *   [A paid tutorial](https://pikuma.com/courses/raycasting-engine-tutorial-algorithm-javascript)
+    *   [JS tutorial building on lodev tutorial](https://andrewmushel.com/portfolio/js-raycaster.html) inc. with dors.
+    *   [FPGA racing-the-beam ray TRACER](https://www.youtube.com/watch?v=gWjCJI_u8SU).
+*   Ideas:
+    *   When later implementing in Verilog, in order to avoid costly division circuits, is there a way we can simultaneously calculate both the *distance* and the respective *height* of the wall column to render, embedded within the DDA loop? I could imagine a way to start with a reference height or initial height, and then subtract a progressively-decreasing number with each step.
+    *   An alternative is to have a lookup table that can convert different ranges of input values to known integer height outputs; such a table would have (at most) 240 entries, except where taller-than-screen values are required.
+    *   Will it work OK, though, with [fixed-point maths](https://en.wikipedia.org/wiki/Fixed-point_arithmetic)? Wikipedia DDA article touches on it.
+
+
+## Fixing mouse wheel in Ubuntu 20 Desktop VM
+
+Ubuntu 20.04 LTS Desktop VM, in VirtualBox, on a Windows host.
+
+It's a common problem in VirtualBox, with a Linux guest using a GNOME (?) desktop environment,
+that mousewheel events get discarded while the pointer is moving. There are lots of proposed
+solutions to this, but below is what worked for me.
+
+This borrows info from [here](https://forums.virtualbox.org/viewtopic.php?f=3&t=79002&start=15#p416603)
+and [here](https://forums.virtualbox.org/viewtopic.php?f=3&t=79002&start=30#p518447),
+mostly, and with a little modification.
+
+1.  Powered off the VM, and go into VM settings.
+2.  General &rarr; Advanced: Disable Drag'n'Drop
+3.  System &rarr; Pointing Device: PS/2 Mouse
+4.  Power on, then `sudo apt install imwheel`
+6.  Create `~/.imwheelrc`:
+    ```
+    "^.*$"
+        None, Up, Button4, 2
+        None, Down, Button5, 2
+        Shift_L,   Up,   Shift_L|Button4, 2
+        Shift_L,   Down, Shift_L|Button5, 2
+        Control_L, Up,   Control_L|Button4
+        Control_L, Down, Control_L|Button5
+    ```
+7.  Run `imwheel -b "4 5"` -- it should background itself.
+    *   Verify that mousewheel works, now, while moving the pointer in VSCode and Firefox.
+8.  To make this permanent, make an autostart desktop entry:
+    1.  ```bash
+        cd ~
+        mkdir -p .config/autostart
+        ```
+    2.  Create `.config/autostart/imwheel.desktop`:
+        ```ini
+        # This fixes the mousewheel while the pointer is moving.
+        # See: https://github.com/algofoogle/journal/blob/master/0061-2023-04-16.md#fixing-mouse-wheel-in-ubuntu-20-desktop-vm
+        [Desktop Entry]
+        Type=Application
+        Name=imwheel
+        # The given -b option restricts this to the wheel and avoids breaking the side buttons.
+        Exec=imwheel -b "4 5"
+        StartupNotify=false
+        Terminal=false
+        ```
+    3.  Reboot.
+9.  Run `ps -fA | fgrep imwheel` to prove that imwheel is running.
+
