0061: Some more notes

--- a/0061-2023-04-16.md
+++ b/0061-2023-04-16.md
@@ -18,6 +18,57 @@
     *   I'm figuring out algorithms in C++ first: [raybox-app](https://github.com/algofoogle/raybox-app)
     *   Then I'll try the equivalent in Verilog: [raybox](https://github.com/algofoogle/raybox)
 
+## Other things to learn
+
+*   [Rendering GDS files with Blender](https://www.zerotoasiccourse.com/post/3drendering/)
+*   [OpenRAM Playground](https://colab.research.google.com/drive/1VRzdhLS3Gg84vb4_gfM54xV8ZKNBGgzJ?usp=sharing&pli=1) on Google Colab.
+*   [Custom standard cells in SKY130](https://github.com/iic-jku/SKY130-RTL-with-Custom-Standardcell-to-GDSII)
+*   [efabless/caravel_board](https://github.com/efabless/caravel_board)
+*   [kbeckmann's notes about clocks in Caravel](https://gist.github.com/kbeckmann/da4bc07d7ddfe854074e74822a10cc9e)
+*   [caravel_vsd_priority_encoder](https://github.com/Khalique13/caravel_vsd_priority_encoder) -- Great example of a Caravel project's README
+*   [Project F: Various FPGA graphics/maths things](https://projectf.io/posts/news-2022-09/)
+*   [8bitworkshop stuff](https://8bitworkshop.com/v3.9.0/?platform=verilog&file=rototexture.ice#) - rotating texture demo in Silice.
+*   [FPGA/Verilog tutorial targeting a simple CPU](https://github.com/Obijuan/open-fpga-verilog-tutorial/wiki/Home_EN)
+
+## Tiny Tapeout 3 submission
+
+*   I want to adapt [solo_squash](https://github.com/algofoogle/solo_squash) to work with [Tiny Tapeout 3](https://tinytapeout.com/runs/tt03/).
+*   This will be an [HDL-based submission](https://tinytapeout.com/hdl/).
+*   Things to work out:
+    *   What's the size that the submission must be? 150x170um?
+    *   Should I add any extra features to the design if we have spare room?
+    *   What's the maximum clock speed, and max speed of IOs?
+    *   Is there a clock already provided, or is it one of the inputs?
+    *   Given we have 8 inputs, and 8 outputs, what should we use these for?
+        *   Inputs:
+            1.  Up
+            2.  Down
+            3.  Reset?
+            4.  Clock??
+            5.  Optional: New game
+            6.  Optional: Pause
+            7.  Unused
+            8.  Unused
+        *   Outputs:
+            1.  HSYNC
+            2.  VSYNC
+            3.  R
+            4.  G
+            5.  B
+            6.  Optional: Speaker
+            7.  Debug reset out?
+            8.  Debug GPIO ready out?
+    *   Can we replace the firmware for this chip?
+*   [tinytapeout-03](https://github.com/TinyTapeout/tinytapeout-03) is where all designs are being aggregated into a main caravel project.
+*   With only 1 week to submit, I may not make it to TT03 because:
+    *   Max. clock speed seems to be about 12.5kHz at this point. Maybe more, but not likely to improve until TT04.
+    *   Hence, I can't do anything at VGA clock speeds.
+    *   Any other designs that are useful/interesting at this low speed? What about BFCPU or some other CPU design?
+*   Watch [this video on working with HDLs for TT03](https://www.youtube.com/watch?v=bjih-6_1iEA).
+*   Template project for HDL appears to be: [tt03-verilog-demo](https://github.com/TinyTapeout/tt03-verilog-demo)
+*   [Good info on testing](https://tinytapeout.com/hdl/testing/) that might apply more generally.
+
+
 ## FPGA Ray Caster notes
 
 *   My aim is to make hardware (FPGA or ASIC) that can accelerate some or all of the rendering for a simple ray-casting (i.e. Wolf3D-style) game.
@@ -54,6 +105,7 @@
     *   When later implementing in Verilog, in order to avoid costly division circuits, is there a way we can simultaneously calculate both the *distance* and the respective *height* of the wall column to render, embedded within the DDA loop? I could imagine a way to start with a reference height or initial height, and then subtract a progressively-decreasing number with each step.
     *   An alternative is to have a lookup table that can convert different ranges of input values to known integer height outputs; such a table would have (at most) 240 entries, except where taller-than-screen values are required.
     *   Will it work OK, though, with [fixed-point maths](https://en.wikipedia.org/wiki/Fixed-point_arithmetic)? Wikipedia DDA article touches on it.
+
 
 
 ## Fixing mouse wheel in Ubuntu 20 Desktop VM
