--- a/0064-2023-04-21.md
+++ b/0064-2023-04-21.md
@@ -54,3 +54,18 @@ implementing all those modules properly.
 I might still need to get fixed point basics implemented first, because otherwise a lot
 of these modules (even stubs) to be implemented won't be very helpful in the long run.
 
+A proper optimised version of this will precalculate as much as possible, and use constants if we can.
+For example, the rays-from-camera-horizon stuff could be worked out in advance.
+
+# Other notes
+
+*   Will we need to use [signed signals](https://projectf.io/posts/numbers-in-verilog/#signing-your-signals)
+    when we work with fixed point, in our specific application? Maybe.
+*   Interesting example of `always_comb` in "[Catching the Overflow](https://projectf.io/posts/numbers-in-verilog/#catching-the-overflow)".
+    Note how there are two assignments to signal `z`, one inside an `if`. How does SystemVerilog decide which wins?
+    Is it always the last, or the one that's most specific?
+*   To what extent is it necessary to use actual fixed-point everywhere, given certain certain things like
+    player position could be in whatever units we like, so long as we scale everything else appropriately
+    throughout the map. For instance, if we assume each map cell can be painted with a 64x64 texture, then
+    map cells could just be on every multiple of 64. We can then use fixed-point, when needed, for much more
+    precise ray tracing and sub-pixel stuff (if that's even truly necessary).
