Added Tiny Tapeout submission info to 0066, and wrote 0067 with a few extra notes

--- a/0066-2023-04-26.md
+++ b/0066-2023-04-26.md
@@ -1,5 +1,21 @@
 # 26 Apr 2023
 
+
+# Anton's Tiny Tapeout 3 (TT03) submission
+
+*   I successfully submitted a very simple design to Tiny Tapeout 3: [anton1-tt03](https://tinytapeout.com/runs/tt03/024/) (or [see it on GitHub](https://github.com/algofoogle/anton1-tt03))
+*   GDS can be viewed in 3D here: https://algofoogle.github.io/anton1-tt03/
+*   I managed to scrape in at the last minute; 3:30am my time, right on the deadline! Waiting for GitHub Action processing was nerve-wracking.
+*   I paid to receive the chip on a board, and hopefully that will be somewhere in October 2023 or maybe November... assuming Efabless gets the chip completed by the estimated mid-August date (for the 2304C shuttle).
+*   The design itself is not very interesting; I had very little time.
+    *   I first tried an RLE encoder, but realised I needed to come up with a good spec for an RLE protocol that would not lead to a buffer overrun.
+    *   I then tried a fixed-point reciprocal approximator, but after multiple attempts to cut it down I found that it was generating just too many cells to fit. Maybe it would work OK if in future I dropped it from Q6.10 to Q6.6 or something.
+    *   Then I had a multiplier that takes two 16-bit inputs and gives a 32-bit product, but that was a bit too big.
+    *   With very little time left I landed on a multiplier that takes two 8-bit inputs and gives a 16-bit product.
+*   Since then, I've revised the design in another branch ([`config-width`](https://github.com/algofoogle/anton1-tt03/tree/config-width)) to support a configurable number of operand nibbles, and it fits given the range of 1..3, but not 4+.
+
+
+
 # Raybox
 
 *   NOTE: On the matter of reciprocals: for raydir reciprocals, we'll typically only be dealing with an input range of something like 0..1.414 (for 90deg FOV?). Hence we'd only need Q1.X on input, but maybe full precision on output.
@@ -8,7 +24,6 @@
 
 # Notes
 
-*   Need to update anton1-tt03:info.yaml and README
 *   [`tt-support-tools` repo](https://github.com/TinyTapeout/tt-support-tools) needs some better instructions. There's [requirements.txt](https://github.com/TinyTapeout/tt-support-tools/blob/tt03/requirements.txt) but check what the ['gds' GHA]() *actually* does and put instructions into the README.
 *   Look at PDF builder and offer a better version. Still needs to use OS tools, maybe still pandoc. What about SVG support?
 *   After trying to do GDS build locally, look at `.dot` graphs.
