Adding notes about grid boundary glitch

--- a/0071-2023-05-01.md
+++ b/0071-2023-05-01.md
@@ -4,9 +4,10 @@
 
 ## Achievements
 
-*   Fixed the tracing glitch, yay!
+*   Fixed the wall edge tracing glitch, yay!
 *   Also seems to improve the FPGA memory glitch (though there are still timing errors)
 *   Q16.16 is working well
+*   Also got other parametric Qm.n options to work. Q11.9 seems to work, for instance.
 *   Pictures needed:
     *   FPGA setup
     *   FPGA glitching - anim gif?
@@ -14,7 +15,11 @@
 
 ## Next steps
 
-*   Next need to see if we can drop Q16.16 a bit, to maybe Q8.12? Make `lzc` and `reciprocal` support different bit depths. I've made most of the fixed-point stuff generic/parametric, but there are still some errors somewhere if not using Q16.16.
+*   **New bug discovered:** If player is perfectly on a grid boundary (i.e. fractional part is 0)
+    then something seems to go wrong with working out the map grid cells (at least for those
+    on the right side of the viewplane)...?
+    *   **Maybe saturation test in DDA will fix this.**
+    *   **Need to verify this same bug exists prior to all the Q16.16 changes** -- Cherry-pick the wall edge glitch fix?
 *   Fix FPGA player position reset. Why does it (seemingly) go to (0,0)?
 *   Implement rotation, even if done externally on frame start, for now -- clock domains!
     *   Try mouse integration via Verilator/SDL. Will this work with VirtualBox?
