--- a/0071-2023-05-01.md
+++ b/0071-2023-05-01.md
@@ -20,6 +20,7 @@
     on the right side of the viewplane)...?
     *   **Maybe saturation test in DDA will fix this.**
     *   **Need to verify this same bug exists prior to all the Q16.16 changes** -- Cherry-pick the wall edge glitch fix?
+*   Implement simulation inspection of some signals, esp. player data.
 *   Fix FPGA player position reset. Why does it (seemingly) go to (0,0)?
 *   Implement rotation, even if done externally on frame start, for now -- clock domains!
     *   Try mouse integration via Verilator/SDL. Will this work with VirtualBox?
